run * js/partial/footer.js

--- a/en/html/About.html
+++ b/en/html/About.html
@@ -1,17 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Sanny Builder</title></title>
+  <title>Sanny Builder</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style2.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
 <p>
 
 
-<h2>Sanny Builder</h2>
+<h2 >Sanny Builder</h2>
 <p>Sanny Builder is a fast and powerful tool designed for the GTA 3D game series (GTA3, VC, SA; partially LCS and VCS).</p>
 
 <p>It includes a disassembler, permitting the end-user to transform the game scripts into text. The compiler feature offers a convenient editor with a large number of useful functions such as syntax highlighting, error checking, advanced search tools, player coordinates reading, fast movement through code and much more.</p>
@@ -61,4 +60,4 @@ An <span class="i">output_file_path</span> parameter is optional. If there is no
 <p>Best regards, Seemann.</p>
 <p>Copyright &copy; 2005-2015 Seemann</p>
 
-</body></html>
+</p>
