--- a/en/html/About2.html
+++ b/en/html/About2.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Version History</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<link rel="stylesheet" type="text/css" href="style/style2.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style2.css">
 </head>
 <body>
 <h2>Version History</h2>
