--- a/en/html/Cleo.html
+++ b/en/html/Cleo.html
@@ -48,24 +48,6 @@ You may find the list of available plugins on <a href="http://cleo.sannybuilder.
 <p>The  author of the CLEO library is <a href="http://www.gtaforums.com/index.php?showuser=49411" target="_blank">Seemann</a>. The author has no liability for any negative  consequences caused by using this product. Use it at your own risk.<br>
   <br>
 If  you want to help in developing of the library or its plugins, contact me by  forum or e-mail.</p><p>
-Also thanks to <a href="http://www.gtaforums.com/index.php?showuser=236130" target="_blank">Stanislav Golovin (aka listener)</a> for his support and useful information. <br>
+Also thanks to <a href="http://www.gtaforums.com/index.php?showuser=236130" target="_blank">Stanislav Golovin (aka listener)</a> for his support and useful information.
 </p>
-          </TD>
-          <TD width="5"
-        background="rtd.gif"></TD>
-      </TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-<BR><BR></TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+<script src="../../js/partial/footer.js"></script>
