--- a/en/html/GTA_INI.html
+++ b/en/html/GTA_INI.html
@@ -51,21 +51,7 @@ The following letters  denote the parameter type: <br>
 The type changes the  decompiler behavior. For example, it adds a comment with the gxt-key content  for the g-parameter; converts the p-one to the label, the o-parameter to the  model name (like #NULL in the 0053), etc.<br>
 Attention!  The parameters order can never  be changed as it will cause the impossibility to compile your scripts correctly  by the other users. The only way to do so is if you <b>never going to</b> publish your script.<br>
 You  can freely change the description words and the parameters types, if it needed.  The comments are marked with the semicolon at the beginning of the line.<p>
-If the INI contains few opcodes with the same  number, the program uses that one located further.</TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-<p></TD></TR><td width="100%"></TBODY></TABLE>
+If the INI contains few opcodes with the same  number, the program uses that one located further.
+</p>
+<script src="../../js/partial/footer.js"></script>></TBODY></TABLE>
 </TABLE></body></html>
