--- a/en/html/O_100.html
+++ b/en/html/O_100.html
@@ -13,4 +13,5 @@
 <h2>Options</h2>
 <p>The options window is shown when you press <span class="kbd">F10</span>. This window is divided into five pages, each of them contains certain kind of settings. By default <a href="O_101.html">the general settings</a> page is open.</p>
 
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
