--- a/en/html/O_102.html
+++ b/en/html/O_102.html
@@ -43,21 +43,6 @@
 	<a name="strA"></a>
 	<hr>
 	<img src="img/en/old/options/sbo/form_case.png" width="208" height="55">
-	<p class="text">This option has two meanings. The decompiler names global variables, labels, arrays using the selected letters case. The compiler writes the strings in the SCM using the selected letter case also.</p>	</TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+	<p class="text">This option has two meanings. The decompiler names global variables, labels, arrays using the selected letters case. The compiler writes the strings in the SCM using the selected letter case also.
+</p>
+<script src="../../js/partial/footer.js"></script>
