--- a/en/html/O_103.html
+++ b/en/html/O_103.html
@@ -43,4 +43,5 @@
 <p>Here you can choose the font and tune it. Sanny Builder supports only fixed-pitch fonts. The line <span class="bold">AaBbCcDd</span> reflects the chosen settings.</p>
 <img src="img/en/old/options/sbo/editor_font.png" width="222" height="67">
 
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
