--- a/en/html/SCMHELP01.html
+++ b/en/html/SCMHELP01.html
@@ -18,5 +18,6 @@ Contents:
 <li><a href="SCMHELP04.html">GTA LCS</a></li>
 </ul>
 Help materials by:<br>
-alexander aka alexander koryakin, barton waterduck, bigun, deezire, opius, pdescobar, san'ok aka alexander golovnev, seemann, spaceeinstein, spinnie, xieon, wesser, <a href="http://www.lzfdownloads.de/index.php?page=46&action=text#1" target="_blank">http://www.lzfdownloads.de/</a></p>
+alexander aka alexander koryakin, barton waterduck, bigun, deezire, opius, pdescobar, san'ok aka alexander golovnev, seemann, spaceeinstein, spinnie, xieon, wesser, <a href="http://www.lzfdownloads.de/index.php?page=46&action=text#1" target="_blank">http://www.lzfdownloads.de/</a>
+</p>
 <script src="../../js/partial/footer.js"></script>
