--- a/en/html/SCMHELPGTALimit.html
+++ b/en/html/SCMHELPGTALimit.html
@@ -110,21 +110,6 @@
 </tr></table><br>
 <div class="legal">Originally posted by CyQ on <a href="http://www.gtaforums.com/index.php?showtopic=213017&view=findpost&p=3145932"> GTAForums.com</a></div>
 
- </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+
+</p>
+<script src="../../js/partial/footer.js"></script>
