--- a/en/html/SCMHELPGTASA.html
+++ b/en/html/SCMHELPGTASA.html
@@ -687,22 +687,6 @@ if the model does not have that many extras, and variants greater than 5 will cr
     <td class="kays3">x</td>
     <td class="kays3">x</td>
   </tr>
-</table></TD>
-      <TD width=5
-        background="rtd.gif"></TD>
-      </TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+</table>
+</p>
+<script src="../../js/partial/footer.js"></script>
