--- a/en/html/SCMHELPGTASA10.html
+++ b/en/html/SCMHELPGTASA10.html
@@ -61,4 +61,5 @@
 <tr><td>'WUZIMU'</td><td>Wu Zi</td></tr>
 <tr><td>'ZERO'</td><td>Zero</td></tr>
 </table>
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
