--- a/en/html/SCMHELPGTAVC2.html
+++ b/en/html/SCMHELPGTAVC2.html
@@ -82,21 +82,6 @@
                 <td width="120" valign="top" class="kays5">18 </td>
                 <td width="235" valign="top" class="text2">Print Works </td>
               </tr>
-            </table>           	    </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+            </table>
+</p>
+<script src="../../js/partial/footer.js"></script>
