--- a/en/html/SCMHELPGTAVC4.html
+++ b/en/html/SCMHELPGTAVC4.html
@@ -217,21 +217,6 @@ and got all the alternative marker 'types' the 28? in the above code, Just chang
                 <td bgcolor="#ECE9D8"><img src="img/vc/radar/RWave.png" width="16" height="16" border="0"></td>
                 <td width="413" valign="top" class="text4">Wave station logo</td>
               </tr>
-            </table></TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+            </table>
+</p>
+<script src="../../js/partial/footer.js"></script>
