--- a/en/html/additional.html
+++ b/en/html/additional.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Additional commands</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../../style/style2.css">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Additional commands</h2>
 
 <h3>INC</h3>
@@ -83,6 +85,5 @@
 <p>Generates a random number within a range specified by the parameters.</p>
 
 <pre><span class="variable">$rnd</span> = random(<span class="number">1</span>, <span class="variable">$high</span>)</pre>
-<p>This function can be used for both integers and floats. The opcode is chosen depending on the type of a resulting variable ($rnd in this case)</p>
-</body>
-</html>
+<p>This function can be used for both integers and floats. The opcode is chosen depending on the type of a resulting variable ($rnd in this case)</p></p>
+<script src="../../js/partial/footer.js"></script>
