--- a/en/html/articles.html
+++ b/en/html/articles.html
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>Articles</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head><body>
-
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
+</head>
+<body>
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Articles</h2>
 
 <ul>
@@ -13,4 +16,5 @@
 <li><a href="articles2.html">Mission Coding with Sanny Builder Tutorial Part II</a></li>
 </ul>
 
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
