--- a/en/html/articles1.html
+++ b/en/html/articles1.html
@@ -515,21 +515,6 @@ style="MARGIN-TOP: 12pt; MARGIN-BOTTOM: 12pt; MARGIN-LEFT: 12pt; x-cell-content-
                 <TD class=HEX vAlign=top width=95>DE</TD>
               </TR>
             </TBODY>
-          </TABLE></TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+          </TABLE>
+</p>
+<script src="../../js/partial/footer.js"></script>
