--- a/en/html/data_types.html
+++ b/en/html/data_types.html
@@ -85,21 +85,6 @@ Empty string is also allowed: <span class="general1-string">"&nbsp;&nbsp;"</span
 <br>
 <p>
 
-	A number has to be within -80000000..7FFFFFFF range.</p>          </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+	A number has to be within -80000000..7FFFFFFF range.
+</p>
+<script src="../../js/partial/footer.js"></script>
