--- a/en/html/directives.html
+++ b/en/html/directives.html
@@ -103,5 +103,6 @@ It accepts an <span class="i">opcode definition</span> in <a href="gta_ini.htm#s
 <p>Example: <span class="directive">{$OPCODE additional_opcodes.ini}</span></p>
 <p>When used <span class="i">without any parameter</span>, this directive reloads the original opcodes definitions file, so all the changes made by previous using of this directive are gone.</p>
 <p>Example: <span class="directive">{$OPCODE}</span></p>
-<p class="note">The short variant of this directive is $O.</p>
-</body></html>
+<p class="note">The short variant of this directive is $O.
+</p>
+<script src="../../js/partial/footer.js"></script>
