--- a/en/html/edit_modes.html
+++ b/en/html/edit_modes.html
@@ -35,6 +35,6 @@
 
 <p>Before disassembling or compiling a script, make sure that the correct edit mode is active. Even if the script is compiled with no errors, the game will crash when trying to read a script in different format.</p>
 
-<p>A compiled script file may have an information which game it is made for. So, if you decompile such a script in another edit mode being active, Sanny Builder will propose you to change the mode to the correct one. Declining this prompt may cause a crash of the disassembler, because the script format is unexpected for it.</p>
-
-</body></html>
+<p>A compiled script file may have an information which game it is made for. So, if you decompile such a script in another edit mode being active, Sanny Builder will propose you to change the mode to the correct one. Declining this prompt may cause a crash of the disassembler, because the script format is unexpected for it.
+</p>
+<script src="../../js/partial/footer.js"></script>
