--- a/en/html/editor.html
+++ b/en/html/editor.html
@@ -25,4 +25,5 @@
 <li><a href="hotkeys.html">Hotkeys</a></li>
 <li><a href="opcode_search.html"> Opcode Search Tool</a></li></li>
 </ul>
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
