--- a/en/html/features.html
+++ b/en/html/features.html
@@ -117,4 +117,5 @@
 <h3>Checking for updates</h3>
 <p>Sanny Builder is able to check if a new version is available. To use this feature go to menu "Help->Check for update...". The editor will connect to the update servers and propose to download and install an update file if the latter exists. The editor can automatically check for an available update at startup if you enable this option in the updater window.</p>
 
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
