--- a/en/html/hex_end.html
+++ b/en/html/hex_end.html
@@ -58,4 +58,6 @@ It produces the following sequence of bytes: <span class='number'>00 08 09 0A 0D
 <span class="variable">&1000</span> <span class="variable">&</span><span class="number">-0xA33500</span>
 <span class="reservedword">end</span></pre></p>
 This example produces the following sequence of bytes: <span class='number'>E8 03 00 CB 5C FF</span>.
-</body></html>
+
+</p>
+<script src="../../js/partial/footer.js"></script>
