--- a/en/html/keywords.html
+++ b/en/html/keywords.html
@@ -17,22 +17,6 @@ To demonstrate: </p>
 <p>
 	instead of</p>
 <DIV class=mycode5>	0001: <span class="general1-reservedword">wait</span> <span class="general1-number">0</span></DIV>
-<p>The keywords list can be displayed by  pressing Ctrl+Space.</p>
-        </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+<p>The keywords list can be displayed by  pressing Ctrl+Space.
+</p>
+<script src="../../js/partial/footer.js"></script>
