--- a/en/html/loops.html
+++ b/en/html/loops.html
@@ -103,4 +103,5 @@ inc(<span class="variable">$var</span>)
 <span class="reservedword">end</span>
 </pre>
 
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
