--- a/en/html/variables.html
+++ b/en/html/variables.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <title>Variables</title>
-<link rel="stylesheet" type="text/css" href="style/style2.css">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-
+<script src="../js/partial/header.js"></script>
+<p>
 <h2>Variables</h2>
 
 <p>A variable (var) is a named storage location that contains a value and can be read/rewrite many times. There are two kinds of variables:<br>
@@ -105,4 +107,5 @@ or
 
 <p>Initialization is allowed for the variables only, not for arrays.</p>
 
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
