--- a/en/html/CLEO_5.html
+++ b/en/html/CLEO_5.html
@@ -10,23 +10,6 @@
 <script src="../js/partial/header.js"></script>
 <p class="text3"><em>CLEO library not found</em></p>
     <p class="text">This error message is  displayed, if you used an opcode that requires the CLEO library to be  installed. The program either not found needed files or the existed files is  outdated.</p>
-    <p class="text"><strong>Possible solutions:</strong>  install CLEO by clicking the word CLEO on the  bottom panel.</p>
-    <br><br></TD>
-          <TD width="5"
-        background="rtd.gif"></TD>
-      </TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-<BR><BR></TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+    <p class="text"><strong>Possible solutions:</strong>  install CLEO by clicking the word CLEO on the  bottom panel.
+</p>
+<script src="../../js/partial/footer.js"></script>
