--- a/en/html/Cleo_OP.html
+++ b/en/html/Cleo_OP.html
@@ -421,23 +421,6 @@ The opcode 0ABA immediately finishes the execution of a thread with given name. 
 			  <br>1 - handle of the vehicle
 			  <br>2 - engine's new state:
 			  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;0 - off
-			  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1 - on</p>
-</TD>
-          <TD width="5"
-        background="rtd.gif"></TD>
-      </TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-<BR><BR></TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+			  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1 - on
+</p>
+<script src="../../js/partial/footer.js"></script>
