--- a/en/html/O_101.html
+++ b/en/html/O_101.html
@@ -55,21 +55,6 @@
 	<p class="text"><b><u>Insert original mission names</u></b></p>
 	<p class="text">When this option checked,  the decompiler adds predefined original mission names as comments for the  opcode <b>start_mission</b> and for the  line DEFINE MISSION in the file header.</p>
 	<p class="text"><b><u><a name="SCM"></a>Add extra info to SCM </u> </b></p>
-	<p class="text">If this option is  checked the compiler adds extra information to the end of the file main.scm.  This info will be used later when this file is decompiled in order to bring it to  maximum conformity with original source. The following data is added to the end  of the main.scm:  <a href="hex_end.html">hex..end constructs</a> offsets, <a href="variables.html">global variables names</a> and so on. Pay attention that the file compiled in  such way cannot be decompiled in older SB versions (except the case when <a href="console.htm#IGNORE_UNKNOWN">ignore_unknown</a> option is enabled).</p>		</TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+	<p class="text">If this option is  checked the compiler adds extra information to the end of the file main.scm.  This info will be used later when this file is decompiled in order to bring it to  maximum conformity with original source. The following data is added to the end  of the main.scm:  <a href="hex_end.html">hex..end constructs</a> offsets, <a href="variables.html">global variables names</a> and so on. Pay attention that the file compiled in  such way cannot be decompiled in older SB versions (except the case when <a href="console.htm#IGNORE_UNKNOWN">ignore_unknown</a> option is enabled).
+</p>
+<script src="../../js/partial/footer.js"></script>
