--- a/en/html/O_104.html
+++ b/en/html/O_104.html
@@ -23,23 +23,6 @@
   <strong>Models – </strong><strong>the identifiers beginning with a  #.</strong><br><br>
   <strong>Classes </strong>– the part of the class command: the  identifier before the point.<br><br>
   <strong>Commands </strong>– the part of the  class commands: identifier after the point.<br><br>
-  <strong>Directives</strong> – the comment containing a $  immediately after the opening {.</p>
-
-            </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+  <strong>Directives</strong> – the comment containing a $  immediately after the opening {.
+</p>
+<script src="../../js/partial/footer.js"></script>
