--- a/en/html/O_105.html
+++ b/en/html/O_105.html
@@ -11,22 +11,5 @@
 <p>
 <img src="img/en/old/options/sbo/hotkeys.png" width="464" height="420">
             <p class="text">Some <a href="hotkeys.html">hotkeys</a> are customizable for your comfort. You may set up new keyboard shortcuts for the IDE tools, editor actions and some other features.
-
-            </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
