--- a/en/html/SCMHELPGTASA1.html
+++ b/en/html/SCMHELPGTASA1.html
@@ -318,21 +318,6 @@
     <td class="text3">(-2114.42, -2462.27, 29.4809)</td>
     <td class="text4">Angel Pine Ammunation garage</td>
   </tr>
-</table></TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+</table>
+</p>
+<script src="../../js/partial/footer.js"></script>
