--- a/en/html/SCMHELPGTASA14.html
+++ b/en/html/SCMHELPGTASA14.html
@@ -414,21 +414,6 @@
     <td valign="middle" class="general1-model"><div align="center">#jetpack</div></td>
     <td width="64" valign="middle" class="general1-model"><div align="center"><img src="img/sa/weapon/jetpack.gif" width="64" height="64"></div></td>
   </tr>
-</table></TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+</table>
+</p>
+<script src="../../js/partial/footer.js"></script>
