--- a/en/html/SCMHELPGTASA2.html
+++ b/en/html/SCMHELPGTASA2.html
@@ -21,22 +21,6 @@
                 <span class="text2">Gang6</span>&nbsp;&nbsp;&nbsp;&nbsp; <span class="text4">Mountain Cloud Triad</span><br>
                 <span class="text2">Gang7</span>&nbsp;&nbsp;&nbsp;&nbsp; <span class="text4">Varrio Los Aztecas</span><br>
                 <span class="text2">Gang8</span>&nbsp;&nbsp;&nbsp;&nbsp; <span class="text3">(unused)</span><br>
-                <span class="text2">Gang9&nbsp;</span>&nbsp;&nbsp;&nbsp; <span class="text3">(unused)</span><br>
-            </p></TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+                <span class="text2">Gang9&nbsp;</span>&nbsp;&nbsp;&nbsp; <span class="text3">(unused)</span>
+</p>
+<script src="../../js/partial/footer.js"></script>
