--- a/en/html/SCMHELPGTAVC.html
+++ b/en/html/SCMHELPGTAVC.html
@@ -50,22 +50,6 @@
               <td width="130" valign="top" class="text5">Gang8 </td>
               <td width="233" valign="top" class="text4">Army (special gang) </td>
             </tr>
-          </table>          <br>
-		    </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+          </table>
+</p>
+<script src="../../js/partial/footer.js"></script>
