--- a/en/html/SCMHELPGTAVC3.html
+++ b/en/html/SCMHELPGTAVC3.html
@@ -144,21 +144,6 @@ My tested key_press numbers in Vice. Returned by </p>
                 <td width="67" valign="top" class="text5">12 </td>
                 <td width="312" colspan="2" valign="top">Used to exit certain modes </td>
               </tr>
-            </table>			</TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+            </table>
+</p>
+<script src="../../js/partial/footer.js"></script>
