--- a/en/html/SCMHELPGTAVC5.html
+++ b/en/html/SCMHELPGTAVC5.html
@@ -282,21 +282,6 @@ Tested and confirmed weapon numbers returned by           </p>
                 <td width="64" valign="top"><img src="img/vc/weapon/camera.gif" width="64" height="64" hspace="0" vspace="0"></td>
               </tr>
             </table>
-            </div></TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+            </div>
+</p>
+<script src="../../js/partial/footer.js"></script>
