--- a/en/html/articles11.html
+++ b/en/html/articles11.html
@@ -1316,22 +1316,6 @@ from a few return to desktop.<br>
                     same "language" we can get to real coding.<br>
                     Let's get to <a href="articles2.html">part II</a>...<br>
                     <br>
-                    Have fun <br>
-     </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+                    Have fun
+</p>
+<script src="../../js/partial/footer.js"></script>
