--- a/en/html/articles2.html
+++ b/en/html/articles2.html
@@ -1950,23 +1950,5 @@ seconds), and it will be at top of th page highlighted in yellow. <br>
                 <u><b>YOU</b></u> soon...<br>
                 <br>
                 Have fun <br>
-                <br>
-
-     </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
