--- a/en/html/classes.html
+++ b/en/html/classes.html
@@ -155,22 +155,6 @@ You can reference this class using their names:</p>
   <br>
 
 For convenience, a list of extended parameters are displayed when you press  Ctrl+Space.&nbsp; Simply place the cursor where there  should be an extended parameter,&nbsp;  press ctrl+space and the parameters list will be displayed. <br>
-You can then select a name from it and insert this into your code. </p>
-          </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+You can then select a name from it and insert this into your code.
+</p>
+<script src="../../js/partial/footer.js"></script>
