--- a/en/html/coding.html
+++ b/en/html/coding.html
@@ -24,4 +24,5 @@
 <li><a href="hex_end.html">HEX..END</a></li>
 <li><a href="directives.html">Directives</a></li>
 </ul>
-</body></html>
+</p>
+<script src="../../js/partial/footer.js"></script>
