--- a/en/html/conditions.html
+++ b/en/html/conditions.html
@@ -94,22 +94,6 @@ Dec(<span class="general1-variable">$var</span>)
 <p>
 	*If there is no opcode in the line. Otherwise these sign will be
 	ignores like any other words.
+
 </p>
-        </TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"></TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+<script src="../../js/partial/footer.js"></script>
