--- a/en/html/constants.html
+++ b/en/html/constants.html
@@ -52,21 +52,6 @@ VarName[IndexName] = <span class="general1-number">0</span></pre></div>
 0004: VarName[IndexName] = <span class="general1-number">0</span></div>
 <p>Also there  are the limits with using of a complex expression as a constant.</p>
 
-The list of the constants could be called at any place  of the code by pressing Ctrl + [space].</TD>
-          <TD width=5
-        background="rtd.gif"></TD></TR></TBODY></TABLE>
-      <TABLE cellSpacing=0 cellPadding=0 width="100%">
-        <TBODY>
-        <TR>
-          <TD width=5><IMG height=20
-            src="img/en/mtdlbot.png" width=5 border=0></TD>
-          <TD align=left
-            background="mtdbgbot.png"> </TD>
-          <TD class=ninfo align=right
-          background="mtdbgbot.png">&nbsp;
-            </TD>
-          <TD width=5><IMG height=20
-            src="img/en/mtdrbot.png" width=5
-        border=0></TD></TR></TBODY></TABLE></DIV>
-</TD></TR><td width="100%"></TBODY></TABLE>
-</TABLE></body></html>
+The list of the constants could be called at any place  of the code by pressing Ctrl + [space].
+</p>
+<script src="../../js/partial/footer.js"></script>
