--- a/en/html/Cleo_SCRIPT.html
+++ b/en/html/Cleo_SCRIPT.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 CLEO 3 allows adding new  scripts needlessly to start a new game. Strictly speaking, the main.scm  state does not matter for these scripts as CLEO-scripts are run and functioned  separately from it.<br><br>
 What does it give? You can add new script at any stage of the game or  delete existing one. Even so, you do not need to edit the main.scm, so the need  of starting a new game, the saves incompatibility, script limits – all these problems  disappear right away. <br><br>
