--- a/en/html/GTA_INI.html
+++ b/en/html/GTA_INI.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 
             <p>The INI file is the  major file providing the (de)compiling process. It contains a list of opcodes:  its own for each game. These lists are located in the Sanny Builder’s folder  data\’game’:
