--- a/en/html/O_102.html
+++ b/en/html/O_102.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 <img src="img/en/old/options/sbo/formats_page.png" width="447" height="406">
             <p class="text">Here you can set up source file names, labels format, and identifiers case.</p>
