--- a/en/html/SCMHELPGTALCS.html
+++ b/en/html/SCMHELPGTALCS.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
   <div class="mycode5">
 			  023B: set_gang <span class="general1-number">0</span> car_to <span class="general1-number">172</span>            </div>
