--- a/en/html/SCMHELPGTASA13.html
+++ b/en/html/SCMHELPGTASA13.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 
 		  <div class="mycode5"> 06D8: <span class="general1-variable">1@</span> = create_train_at <span class="general1-number">2278.1771 -1144.8823 27.5108</span> TYPE <span class="general1-number">0</span> direction <span class="general1-number">1</span></div>
