--- a/en/html/SCMHELPGTASA16.html
+++ b/en/html/SCMHELPGTASA16.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 
 		  <div class="mycode5"> 0767: set_zone <span class="general1-string">'CARSO'</span> type <span class="general1-number">1</span>  <span class="general1-comment">// Fort Carson</span></div>
