--- a/en/html/SCMHELPGTASA2.html
+++ b/en/html/SCMHELPGTASA2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 
 		  <div class="mycode5">0237: set_gang <span class="general1-number">1</span> weapons_to <span class="general1-number">24 29 4</span></div>
