--- a/en/html/SCMHELPGTASA7.html
+++ b/en/html/SCMHELPGTASA7.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
               Here is available pedtypes, using in </p>
             <div class="mycode5">009A: <span class="general1-variable">$Actor</span> = create_actor <span class="general1-number">INT(pedtype)</span> <span class="general1-model">#MODEL</span> at <span class="general1-number">X Y Z </span></div>
