--- a/en/html/arrays.html
+++ b/en/html/arrays.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 An array represents an indexed collection of elements of the same
 	type (called the base type). You can work with any element directly
