--- a/en/html/articles1.html
+++ b/en/html/articles1.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <TABLE border="1" align="center"
 cellSpacing=0 class=LINE
 style="MARGIN-TOP: 12pt; MARGIN-BOTTOM: 12pt; MARGIN-LEFT: 12pt; x-cell-content-align: Center; border-spacing: 0px" x-use-null-cells>
