--- a/en/html/classes.html
+++ b/en/html/classes.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 <b>Basic Concepts</b>
 <p>Sanny Builder allows you to use classes in the  code.&nbsp; Class is a group of opcodes applied to in-game objects: player,  actor, object, etc.</p>
