--- a/en/html/console.html
+++ b/en/html/console.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p><RR>
             <p>The console is intented to switch the advanced options of Sanny Builder. Mostly they relate to the decompiler features and you can see the changes when decompile a file. The console window is called by pressing Ctrl + ~. You may write the commands and the  parameters in the edit line. After typing a command press Enter to process. The console will display a result.<br><br>
 All commands are case-insensitive.<br><br>
