--- a/en/html/features.html
+++ b/en/html/features.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 <h2>Features</h2>
 <p>Sanny Builder grants the end-user the following possibilities:</p>
