--- a/en/html/hex_end.html
+++ b/en/html/hex_end.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 <h2>HEX..END</h2>
 <p>Sanny Builder supports writing a raw content in an output file. All values within this construct are written in an output file without any checks.</p>
