--- a/en/html/keywords.html
+++ b/en/html/keywords.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 A keyword is a single word that replaces the opcode for simple commands.<br>
 For example, the keyword WAIT can be used  instead of opcode 0001.<br>
