--- a/en/html/opcode_search.html
+++ b/en/html/opcode_search.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 You can call this function  by pressing Ctrl + Alt +  2 or by selecting the menu item: Tools -&gt; IDE  Tools -&gt; Opcode Search.<br>
   <br>
