--- a/en/html/O_104.html
+++ b/en/html/O_104.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 <img src="img/en/old/options/sbo/high_page.png" width="446" height="406">
             <p class="text">You may set  various syntax highlighting schemes on this page. Each code element has 3  properties: <strong>Foreground</strong>, <strong>Background</strong>, <strong>and Style</strong>.<strong></strong><br>
