--- a/en/html/SCMHELPGTASA5.html
+++ b/en/html/SCMHELPGTASA5.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 
             <table cellspacing="0" cellpadding="0">
