--- a/en/html/SCMHELPGTAVC.html
+++ b/en/html/SCMHELPGTAVC.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 
 		  <div class="mycode5"> 0236: set_gang <span class="general1-number">4</span> car_to <span class="general1-string">#BAGGAGE </span><br>
