--- a/en/html/SCMHELPGTAVC5.html
+++ b/en/html/SCMHELPGTAVC5.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 Tested and confirmed weapon numbers returned by           </p>
             <div class="mycode5">
