--- a/en/html/conditions.html
+++ b/en/html/conditions.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 
 There is the operator IF to evaluate the condition.
