--- a/en/html/data_types.html
+++ b/en/html/data_types.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>$ - global variables.</p>
 <code class=mycode5>
 0004: <span class="general1-variable">$MyVar</span> = <span class="general1-number">100</span> </code><br>
