--- a/en/html/edit_modes.html
+++ b/en/html/edit_modes.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
-<script src="../js/partial/header.js"></script>
+<script src="../../js/partial/header.js"></script>
 <p>
 <h2>Edit Modes</h2>
 <p>An edit mode is a set of options determining behaviour of Sanny Builder when working with scripts of a particular game. Fact is, there is no game in the GTA series with the script format same to the others. So, each game requires special settings while editing scripts. That's the reason why the edit modes are introduced in Sanny Builder.</p>
